config/internal-dns/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: internal-dns-system
  labels:
    app.kubernetes.io/part-of: internal-dns
